--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,8 @@
 
   </div>
 
-  <!-- Resources -->
-  <h2>Resources</h2>
+  <!-- Resources HERE ARE CHANGES-->
+  <app-component1></app-component1>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
