--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,7 @@
 #footer{
     height: 30vh;
     display: flex;
+
 }
 
 #left{
@@ -9,6 +10,12 @@
 }
 
 #right{
-    background-color: rgb(197,90,17);
+    background-color:rgb(197,90,17);
     flex: 1;
+}
+
+@media screen and (max-width: 900px) {
+    #right{
+        display: none;
+    }
 }
