Realisation pege de profil

--- a/src/app/components/footer/footer-left-one/footer-left-one.component.html
+++ b/src/app/components/footer/footer-left-one/footer-left-one.component.html
@@ -1,4 +1,4 @@
-<div class="top">
+<div class="top  flex jcsa ">
     <div class="call">
         <span class="material-icons">call</span>
         <div class="text">
@@ -7,7 +7,7 @@
         </div>
     
     </div>
-    <div class="email">
+    <div class="email flex">
         <span class="material-icons">email</span>
             <div class="text">
                 <h3>Email</h3>
