--- a/src/app/components/footer/footer-left-two/footer-left-two.component.html
+++ b/src/app/components/footer/footer-left-two/footer-left-two.component.html
@@ -1,4 +1,4 @@
-<div class="bottom">
+<div class="bottom  mb-20">
     <div class="adresse">
         <span class="material-icons">place</span>
         <div class="text">
