--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,11 @@
-<div id="footer">
-    <div id="left">
-        <app-footer-left></app-footer-left>
-
-    </div>    
-    <div id="right">
-        <app-footer-right></app-footer-right>
+<div id="footer"  >
+    <div class="footer-container  flex ">
+        <div id="right">
+            <app-footer-right></app-footer-right>
+        </div>
+        <div id="left">
+            <app-footer-left></app-footer-left>
+        </div>    
         
     </div>
 </div>
