--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,25 +1,28 @@
-<header>
-    <div class="logo">
-        <a href="#">LOGO</a>
-    </div>
-    <div class="nav-bar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Account</a></li>
-            <li><a href="#"><span class="material-icons">shopping_cart</span></a></li>            
-        </ul>
-        <div class="user-icon">
-            <a href="#"><mat-icon class="material-icons-sharp">
-                account_circle
-                </mat-icon></a>
+<header >
+    <div class="header-container  container">
+        <div class="logo">
+            <a href="#">LOGO</a>
+        </div>
+        <div class="nav-bar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#"><span class="material-icons">shopping_cart</span></a></li>            
+            </ul>
+            <div class="user-icon">
+                <a href="#"><mat-icon class="material-icons-sharp">
+                    account_circle
+                    </mat-icon></a>
+            </div>
+        </div>
+        <div class="burger">
+            <a href="#">
+                <span class="material-icons">menu</span>
+            </a>
+            
         </div>
     </div>
-    <div class="burger">
-        <a href="#">
-            <span class="material-icons">menu</span>
-        </a>
-        
-    </div>
+    
 </header>
