--- a/src/app/components/footer/footer-right/footer-right.component.scss
+++ b/src/app/components/footer/footer-right/footer-right.component.scss
@@ -1,14 +1,16 @@
 .footer-right{
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
+    margin: 0 auto;
     width: 70%;
+
 }
 
 p{
     color: white;
     font-size: 1.6em;
     margin-top: 2em;
+    text-align: start;
 }
 
 
