--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { 
-    margin: 0; 
-    padding: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+// html, body { height: 100%; }
+// body { 
+//     margin: 0; 
+//     padding: 0;
+//     font-family: Roboto, "Helvetica Neue", sans-serif;
+//     overflow-x: hidden;
+//     visibility: visible;
+// }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+
+@import url(assets/framework/utiles.css);
