debut page de produit

--- a/src/app/components/container/profil/edition/about-me/about-me.component.html
+++ b/src/app/components/container/profil/edition/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="apropos-container  py-20 ">
+<div class="apropos-container container  py-20 ">
     <div class="titre-page mt-10 ml-40">
         <app-page-title title="A propos de moi"></app-page-title>
     </div>
