--- a/src/app/components/container/profil/edition/contact-profil/contact-profil.component.html
+++ b/src/app/components/container/profil/edition/contact-profil/contact-profil.component.html
@@ -1,4 +1,4 @@
-<div class="contact-profil-container   py-20">
+<div class="contact-profil-container container  py-20">
     <div class="titre-page mt-10 ml-40 ">
         <app-page-title title="Contact Utilisateur"></app-page-title>
     </div>
