--- a/src/app/components/container/profil/edition/user-profil/user-profil.component.html
+++ b/src/app/components/container/profil/edition/user-profil/user-profil.component.html
@@ -7,11 +7,11 @@
         <form action="" method="post" >
             <div class="form-line">
                 <div class="user-container-item mb-20 ">
-                    <label >Username</label>
+                    <label >Pseudo</label>
                     <input readonly="readonly" type="text" name="username" id="username">
                 </div>    
                 <div class="user-container-item  ">
-                    <label >Firstname</label>
+                    <label >Nom</label>
                     <input readonly="readonly" type="text" name="firstname" id="firstname">
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="user-container-item">
-                    <label >Lastname</label>
+                    <label >Prénom</label>
                     <input readonly="readonly" type="text" name="firstname" id="firstname">
                 </div>
             </div>
