--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,16 +3,16 @@
         <div class="logo">
             <a href="#">LOGO</a>
         </div>
-        <div class="nav-bar">
+        <div class="nav-bar ">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Account</a></li>
-                <li><a href="#"><span class="material-icons">shopping_cart</span></a></li>            
+                <li><a routerLink="/home">Accueil</a></li>
+                <li><a routerLink="#">Produits</a></li>
+                <li><a routerLink="#">Contact</a></li>
+                <li><a routerLink="#">Connexion</a></li>
+                <li><a routerLink="#"><span class="material-icons">shopping_cart</span></a></li>            
             </ul>
             <div class="user-icon">
-                <a href="#"><mat-icon class="material-icons-sharp">
+                <a routerLink="/edit-profil"><mat-icon class="material-icons-sharp">
                     account_circle
                     </mat-icon></a>
             </div>
