--- a/src/app/components/container/profil/edition/edition.component.scss
+++ b/src/app/components/container/profil/edition/edition.component.scss
@@ -1,15 +1,16 @@
 .separateur-hrz{
     width: 80%;
-    background-color: #29313d;
-    border: 2px solid #29313d;
+    background-color: var(--main-color-grey);
+    border: 2px solid var(--main-color-grey);
     margin: 0 auto;
 }
 
 .edition-container{
     max-width: 992px;
-    border: 2px solid #29313d;
+    border: 1px solid var(--main-color-grey);
     margin-bottom: 40px;
     border-radius: 3px;
+    background-color: rgb(255, 255, 255);
 }
 
 @media (max-width: 900px){
