--- a/src/app/components/container/profil/profil-name/profil-name.component.html
+++ b/src/app/components/container/profil/profil-name/profil-name.component.html
@@ -1,11 +1,13 @@
-<div class="profil-name  ">
-    <div class="name container py-40">
+<div  class="profil-name">
+    <!-- <img src="assets/images/fourmis.jpeg" alt="backgorund"> -->
+    
+    <div  class="name container">
         <h2>Bonjour Profile Name</h2>
         <p>Ceci est votre page de profil</p>       
     </div>
-    <div class="user-icon container  flex jcc ">
+    <div class="user-icon container flex aic jcc ">
         <div class="photo-profil">
-            <div class="cercle flex  jcc">
+            <div class="cercle flex jcc">
             </div>
             <div class="icon">
                 <mat-icon class="material-icons-sharp ">
@@ -13,8 +15,8 @@
                 </mat-icon> 
             </div>
         </div>
-    </div>
-    <div class="button-profil">
-        <app-button buttonValue="EDIT PROFIL"></app-button>
+        <div class="button-profil">
+            <app-button buttonValue="EDIT PROFIL"></app-button>
+        </div>
     </div>
 </div>
