--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-// html, body { height: 100%; }
-// body { 
-//     margin: 0; 
-//     padding: 0;
-//     font-family: Roboto, "Helvetica Neue", sans-serif;
-//     overflow-x: hidden;
-//     visibility: visible;
-// }
-
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
 
-@import url(assets/framework/utiles.css);
+@import url(assets/main-css/framework/utiles.css);
+@import url(assets/main-css/color/color.css);
