mise en place des catégories

--- a/src/app/components/container/home/categories/categories.component.html
+++ b/src/app/components/container/home/categories/categories.component.html
@@ -1,8 +1,10 @@
-<div class="categories-container ">
-    <div class="container  flex jcsb">
+<div class="categories-container  flex jcc aic ">
+    <div class="content container flex jcsa">
         <div class="categorie">
             <div class="categorie-image">
-                <img src="assets/images/ppn.webp"  alt="image ppn">
+                <a href="#">
+                    <img src="assets/images/ppn.webp"  alt="image ppn">
+                </a>
             </div>
             <div class="categorie-info">
                 <h3>
@@ -12,41 +14,49 @@
         </div>
         <div class="categorie">
             <div class="categorie-image">
-                <img src="assets/images/hygiene.jpeg"  alt="image hygiene">
+                <a href="#">
+                    <img src="assets/images/hygiene.jpeg"  alt="image hygiene">
+                </a>
             </div>
             <div class="categorie-info">
                 <h3>
-                    <a href="#">Santé - Hygiène</a>
+                    <a href="#">SANTE & HYGIENE</a>
                 </h3>
             </div>
         </div>
         <div class="categorie">
             <div class="categorie-image">
-                <img src="assets/images/scolaire.png"  alt="image kit scolaire">
+                <a href="#">
+                    <img src="assets/images/scolaire.png"  alt="image kit scolaire">
+                </a>
             </div>
             <div class="categorie-info">
                 <h3>
-                    <a href="#">Kit Scolaire</a>
+                    <a href="#">KIT SCOLAIRE</a>
                 </h3>
             </div>
         </div>
         <div class="categorie">
             <div class="categorie-image">
-                <img src="assets/images/bricolage.jpeg"  alt="image bricolage">
+                <a href="#">
+                    <img src="assets/images/bricolage.jpeg"  alt="image bricolage">
+                </a>
             </div>
             <div class="categorie-info">
                 <h3>
-                    <a href="#">Travaux</a>
+                    <a href="#">TRAVAUX</a>
                 </h3>
             </div>
         </div>
         <div class="categorie">
             <div class="categorie-image">
-                <img src="assets/images/culture.png"  alt="image bricolage">
+                <a href="#">
+                    <img src="assets/images/culture.png"  alt="image bricolage">
+                </a>
             </div>
             <div class="categorie-info">
                 <h3>
-                    <a href="#">Culture</a>
+                    <a href="#">CULTURE</a>
                 </h3>
             </div>
         </div>
