--- a/src/app/components/container/home/search-bar/search-bar.component.html
+++ b/src/app/components/container/home/search-bar/search-bar.component.html
@@ -2,7 +2,7 @@
 <div class="website-searchBar-container">
 <!-- Mise en place de container pour centrer la page -->
     <div class="container">
-        <div class="website-searchBar   flex aic gap-10">
+        <div class="website-searchBar container flex aic gap-10">
             <div class="website-adresse">
                 <h2>
                     Vitsika
