--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,12 +1,16 @@
 header{
     background-color:#29313d;
     height: 80px;
+    position: sticky;
+    top: 0;
 }
 .header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 0px auto;
+    padding:10px 0px;
+    height: 100%;
 }
 
 header .nav-bar{
@@ -15,7 +19,7 @@ header .nav-bar{
     align-items: center;
     height: 3em;
     width: 36em;
-    margin-top: 20px;
+    margin-right: 0;
 }
 
 header .logo{
@@ -47,19 +51,50 @@ mat-icon,
     opacity: 1;
 }
 
+.nav-bar ul li a{
+    position: relative;
+}
+
+
+.nav-bar ul li a:after{
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 1.5px;
+    width: 0;
+    left: 0;
+    bottom: -2px;
+    transition: 0.3s;
+}
+
+
+.nav-bar ul li a:hover:after{
+    width:100%;
+}
 .material-icons-sharp{
-    transform: scale(1.8);
+    transform: scale(1.6);
     margin-top: 6px;
+}
+
+.nav-bar ul li a .material-icons{
+    transform: scale(0.9);
+    margin-bottom: 0;
 }
 
 .burger{
 
     display: none;
 }
+/*-------------Media Query------------*/
 
+@media screen and (max-width: 992px) {
+    .header-container{
+        width: 100vw;
+    }
+}
 @media screen and (max-width: 900px) {
-    header{
-        padding-top: 1.4em;
+    .header-container{
+        width: 100%;
     }
 
     header .nav-bar {
