--- a/src/assets/main-css/framework/utiles.css
+++ b/src/assets/main-css/framework/utiles.css
@@ -645,8 +645,8 @@ a{
 .container-md,
 .container-sm{
     width: 100%;
-    padding-right: var(10);
-    padding-left: var(10);
+    padding-right:10px;
+    padding-left: 10px;
     margin-right: auto;
     margin-left: auto;
 }
