--- a/src/assets/main-css/color/color.css
+++ b/src/assets/main-css/color/color.css
@@ -5,5 +5,5 @@
     --main-color-orange:#c55a11;
     --main-color-blue:#2566c7;
     --main-color-blueTwo:#d8ddef;
-    --main-color-green:rgb(130,168,104);
+    --main-color-green:#82A868;
 }
