--- a/src/app/components/container/home/categories/categories.component.html
+++ b/src/app/components/container/home/categories/categories.component.html
@@ -3,7 +3,7 @@
         <div class="categorie">
             <div class="categorie-image">
                 <a href="#">
-                    <img src="assets/images/ppn.webp"  alt="image ppn">
+                    <img src="assets/images/img_categorie/ppn.webp"  alt="image ppn">
                 </a>
             </div>
             <div class="categorie-info">
@@ -15,7 +15,7 @@
         <div class="categorie">
             <div class="categorie-image">
                 <a href="#">
-                    <img src="assets/images/hygiene.jpeg"  alt="image hygiene">
+                    <img src="assets/images/img_categorie/hygiene.jpeg"  alt="image hygiene">
                 </a>
             </div>
             <div class="categorie-info">
@@ -27,7 +27,7 @@
         <div class="categorie">
             <div class="categorie-image">
                 <a href="#">
-                    <img src="assets/images/scolaire.png"  alt="image kit scolaire">
+                    <img src="assets/images/img_categorie/scolaire.png"  alt="image kit scolaire">
                 </a>
             </div>
             <div class="categorie-info">
@@ -39,7 +39,7 @@
         <div class="categorie">
             <div class="categorie-image">
                 <a href="#">
-                    <img src="assets/images/bricolage.jpeg"  alt="image bricolage">
+                    <img src="assets/images/img_categorie/bricolage.jpeg"  alt="image bricolage">
                 </a>
             </div>
             <div class="categorie-info">
@@ -51,7 +51,7 @@
         <div class="categorie">
             <div class="categorie-image">
                 <a href="#">
-                    <img src="assets/images/culture.png"  alt="image bricolage">
+                    <img src="assets/images/img_categorie/culture.png"  alt="image bricolage">
                 </a>
             </div>
             <div class="categorie-info">
