--- a/src/assets/main-css/framework/utiles.css
+++ b/src/assets/main-css/framework/utiles.css
@@ -130,33 +130,34 @@ a{
 }
 
 /*------------------*
-# Button
+# app-button
 *-------------------*/
 
-.btn, button{
+.btn, app-button{
     display: inline-block;
     text-align: center;
     cursor: pointer;
     user-select: none;
     text-transform: uppercase;
     padding: 5px 10px;
-    border: 1px solid #1d1d1d;
+    border: 0.1px solid var(--main-color);
     border-radius: 8px;
-    font-size: 12px;
+    font-size: 14px;
     appearance: auto;
-    background-color: #efefef;
+    background-color: var(--main-color-orange);
+    color: var(--main-color);
     margin: 5px;
 }
 
-.btn.btn-medium, button.btn-medium{
+.btn.btn-medium, app-button.btn-medium{
     font-size: medium;
 }
 
-.btn.btn-large, button.btn-large{
+.btn.btn-large, app-button.btn-large{
     font-size: large;
 }
 
-.btn.btn-small, button.btn-small{
+.btn.btn-small, app-button.btn-small{
     font-size: small;
 }
 
