--- a/src/app/components/container/home/categories/categories.component.scss
+++ b/src/app/components/container/home/categories/categories.component.scss
@@ -19,7 +19,10 @@
     overflow: hidden;
     border-radius: 100%;
     margin: -60px auto 0;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+
+
 
 .categorie-image img{
     width: 100%;
@@ -33,7 +36,9 @@ a{
         color: black;
         font-family: 'odor mean chey', serif;
         font-weight:100;
-    }
+}
+
+
 
 .categorie-info{
     margin-top: 5%;
