--- a/src/app/components/modal-product-view/modal-product-view.component.html
+++ b/src/app/components/modal-product-view/modal-product-view.component.html
@@ -2,19 +2,22 @@
     <div class="overlay"></div>
     <div class="modal-product-view-container flex">
         <div class="modal-product-view-image flex-1">
+            <!-- Affichage des images selon l'image cliquer "?" : au cas ou c vide -->
             <img 
-            src="assets/images/products_ppn/ppn_haricots/1.jpeg" 
-            alt="">
+            [src]="product_ppn ? product_ppn.imageUrl[0] : ''" 
+            [alt]="product_ppn?.name">
         </div>
         <div class="modal-product-view-details tc flex flex-1 jcc">
-            <app-page-title title="Name"></app-page-title>
+            <app-page-title title="{{ product_ppn?.name}}"></app-page-title>
             <div class="modal-product-view-details-price">
-                <h4>€ 440</h4>
+                <!-- "||" Si la valeur n'existe pas ce sera 0 -->
+                <h4>{{ "Europe : " + (product_ppn?.euro_price || 0)/100 + " €" }}</h4>
+                <h4>{{ "Madagascar : " + (product_ppn?.ariary_price || 0) + " Ar" }}</h4>
             </div>
             <div class="modal-product-view-details-created-at">
-                Crée le: 12/12/2025
+                Crée le : {{(product_ppn?.created_at | date:"dd/MM/YYYY") }}
             </div>
-            <app-button  buttonValue="FERMER"></app-button>
+            <app-button (click)="closeModal()"  buttonValue="FERMER"></app-button>
         </div>
     </div>
 
