requete http + add données + creation composant product-container

--- a/src/app/components/container/home/categories/categories.component.html
+++ b/src/app/components/container/home/categories/categories.component.html
@@ -2,13 +2,13 @@
     <div class="content container flex jcsa">
         <div class="categorie">
             <div class="categorie-image">
-                <a href="#">
+                <a href="/ppn">
                     <img src="assets/images/img_categorie/ppn.webp"  alt="image ppn">
                 </a>
             </div>
             <div class="categorie-info">
                 <h3>
-                    <a href="#">PPN</a>
+                    <a href="/ppn">PPN</a>
                 </h3>
             </div>
         </div>
