--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         <div class="nav-bar">
             <ul>
                 <li><a routerLink="/home">Accueil</a></li>
-                <li><a routerLink="#">Produits</a></li>
+                <li><a routerLink="ppn">Produits</a></li>
                 <li><a routerLink="#">Contact</a></li>
                 <li><a routerLink="#">Connexion</a></li>
                 <li><a routerLink="#"><span class="material-icons">shopping_cart</span></a></li>            
