--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@ header{
     height: 80px;
     position: sticky;
     top: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .header-container{
     display: flex;
@@ -20,6 +21,7 @@ header .nav-bar{
     height: 3em;
     width: 36em;
     margin-right: 0;
+    
 }
 
 header .logo{
