--- a/src/app/components/modal-product-view/modal-product-view.component.html
+++ b/src/app/components/modal-product-view/modal-product-view.component.html
@@ -2,7 +2,7 @@
     <div class="overlay"></div>
     <div class="modal-product-view-container flex">
         <div class="modal-product-view-image flex-1">
-            <!-- Affichage des images selon l'image cliquer "?" : au cas ou c vide -->
+            <!-- Affichage des images selon l'image cliquer  ..."?" : au cas ou c vide -->
             <img 
             [src]="product_ppn ? product_ppn.imageUrl[0] : ''" 
             [alt]="product_ppn?.name">
