Add aside-nav, menu Burger

--- a/src/app/components/container/home/products/ppn/product-list-ppn/product-list-ppn.component.html
+++ b/src/app/components/container/home/products/ppn/product-list-ppn/product-list-ppn.component.html
@@ -1,4 +1,6 @@
-
+<div class="page-title flex aic jcsb container ">
+    <app-page-title title="Les produits essentiels" ></app-page-title>
+</div>
 <!-- Affichage du composant product-item --> 
 <div class="product-list container ">
     <app-product-item-ppn 
