--- a/src/app/components/products-container/products-container.component.html
+++ b/src/app/components/products-container/products-container.component.html
@@ -1,1 +1,77 @@
-<p>products-container works!</p>
+
+<app-search-bar></app-search-bar>
+
+<div class="products-container ">
+    <div class="products-categories">
+        <div class="categories-container  flex jcc aic ">
+            <div class="content container flex jcsa" >
+                <div class="categorie">
+                    <div class="categorie-image">
+                        <a  href="/ppn">
+                            <img src="assets/images/img_categorie/ppn.webp"  alt="image ppn">
+                        </a>
+                    </div>
+                    <div class="categorie-info">
+                        <h3>
+                            <a href="/ppn">PPN</a>
+                        </h3>
+                    </div>
+                </div>
+                <div class="categorie">
+                    <div class="categorie-image">
+                        <a href="#">
+                            <img src="assets/images/img_categorie/hygiene.jpeg"  alt="image hygiene">
+                        </a>
+                    </div>
+                    <div class="categorie-info">
+                        <h3>
+                            <a href="#">SANTE & HYGIENE</a>
+                        </h3>
+                    </div>
+                </div>
+                <div class="categorie">
+                    <div class="categorie-image">
+                        <a href="#">
+                            <img src="assets/images/img_categorie/scolaire.png"  alt="image kit scolaire">
+                        </a>
+                    </div>
+                    <div class="categorie-info">
+                        <h3>
+                            <a href="#">KIT SCOLAIRE</a>
+                        </h3>
+                    </div>
+                </div>
+                <div class="categorie">
+                    <div class="categorie-image">
+                        <a href="#">
+                            <img src="assets/images/img_categorie/bricolage.jpeg"  alt="image bricolage">
+                        </a>
+                    </div>
+                    <div class="categorie-info">
+                        <h3>
+                            <a href="#">TRAVAUX</a>
+                        </h3>
+                    </div>
+                </div>
+                <div class="categorie">
+                    <div class="categorie-image">
+                        <a href="#">
+                            <img src="assets/images/img_categorie/culture.png"  alt="image bricolage">
+                        </a>
+                    </div>
+                    <div class="categorie-info">
+                        <h3>
+                            <a href="#">CULTURE</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+</div>
+
+<app-page-title title="Products"></app-page-title>
+    
+    <div class="products-list">
+        product list
+    </div>
