--- a/src/app/components/components-tools/page-title/page-title.component.scss
+++ b/src/app/components/components-tools/page-title/page-title.component.scss
@@ -1,7 +1,13 @@
 h2{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-size: 28px;
+    font-weight: 400;
+    padding-left: 0px;
 }
 *{
-    margin: 0;
-    padding: 0;
+    margin: 30px 0;
+}
+
+.page-title{
+    background-color: red;
 }
