--- a/src/app/components/container/home/categories/categories.component.scss
+++ b/src/app/components/container/home/categories/categories.component.scss
@@ -1,19 +1,19 @@
-.content{
+.content {
     flex-wrap: wrap;
 }
 
-.categories-container{
+.categories-container {
     background-color: var(--main-color-green);
 }
 
-.categorie{
+.categorie {
     border-radius: 6px;
     max-width: 130px;
     text-align: center;
     margin-top: 90px;
 }
 
-.categorie-image{
+.categorie-image {
     width: 120px;
     height: 120px;
     overflow: hidden;
@@ -24,27 +24,48 @@
 
 
 
-.categorie-image img{
+.categorie-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 
-a{
-        text-decoration: none;
-        color: black;
-        font-family: 'odor mean chey', serif;
-        font-weight:100;
+a {
+    text-decoration: none;
+    color: black;
+    font-family: 'odor mean chey', serif;
+    font-weight: 100;
 }
 
 
 
-.categorie-info{
+.categorie-info {
     margin-top: 5%;
     color: var(--main-color);
-    
+
 }
 
 /*----Media Query--------*/
 
+@media screen and (max-width: 992px) {
+    .categorie-image {
+        width: 10vw;
+        height: 10vh;
+    }
+
+    .categorie h3 a {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .categorie-image {
+        width: 10vw;
+        height: 10vh;
+    }
+
+    .categorie h3 a {
+        font-size: 0.6rem;
+    }
+}
