--- a/src/app/components/modal-product-view/modal-product-view.component.scss
+++ b/src/app/components/modal-product-view/modal-product-view.component.scss
@@ -36,3 +36,10 @@
     width: 50%;
     margin: 30px auto;
 }
+
+@media screen and (max-width:768px){
+    .modal-product-view-container{
+        width: 100%;
+        height: 50%;
+    }
+}
