--- a/src/app/components/container/home/categories/categories.component.scss
+++ b/src/app/components/container/home/categories/categories.component.scss
@@ -1,6 +1,3 @@
-.content {
-    flex-wrap: wrap;
-}
 
 .categories-container {
     background-color: var(--main-color-green);
@@ -10,7 +7,9 @@
     border-radius: 6px;
     max-width: 130px;
     text-align: center;
-    margin-top: 90px;
+    margin-top: 20px;
+    gap: 100px;
+    padding: 20px 0;
 }
 
 .categorie-image {
@@ -18,11 +17,13 @@
     height: 120px;
     overflow: hidden;
     border-radius: 100%;
-    margin: -60px auto 0;
+    margin-bottom: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-
+li{
+    flex-direction: column;
+}
 
 .categorie-image img {
     width: 100%;
@@ -36,6 +37,8 @@ a {
     color: black;
     font-family: 'odor mean chey', serif;
     font-weight: 100;
+    font-size: 1.1rem;
+    
 }
 
 
@@ -43,7 +46,7 @@ a {
 .categorie-info {
     margin-top: 5%;
     color: var(--main-color);
-
+    white-space: nowrap;
 }
 
 /*----Media Query--------*/
@@ -54,18 +57,67 @@ a {
         height: 10vh;
     }
 
-    .categorie h3 a {
+    .categorie-info a {
         font-size: 0.9rem;
     }
+
+    .categorie{
+            gap: 80px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .categorie{
+        gap: 50px;
+        margin-top: 0;
+}
 }
 
 @media screen and (max-width: 768px){
     .categorie-image {
-        width: 10vw;
-        height: 10vh;
+        display: none;
     }
 
-    .categorie h3 a {
-        font-size: 0.6rem;
+    .categorie-info a{
+        font-size: 0.7rem;
+        gap: 10px;
     }
 }
+
+//-----------------------------------------------------
+// .categories-container {
+//     background-color: var(--main-color-green);
+// }
+
+// // ul{
+// //     display: flex;
+// // }
+
+// .categorie {
+//     width: 100%;
+//     border-radius: 6px;
+//     max-width: 130px;
+//     text-align: center;
+//     margin-top: 90px;
+//     }
+
+// // li{
+// //     display: flex;
+// //     border-radius: 6px;
+// //     max-width: 130px;
+// //     text-align: center;
+// //     margin-top: 90px;
+// //     justify-content: space-between;
+    
+// // }
+
+// img{
+//         width: 100%;
+//         height: 100%;
+//         overflow: hidden;
+//         border-radius: 100%;
+//         margin: -60px auto ;
+//         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+//         width: 100%;
+//         object-fit: cover;
+//     }
