--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -106,11 +106,16 @@ mat-icon,
         display: none;
     }
 
+    .logo{
+        margin-left: 1.1rem;
+    }
+
     .burger{
         display: block;
         transform: scale(2);
-        margin-right: 0.5rem;
+        margin-right: 1.1rem;
         margin-top: 0.8rem;
     }
 }
+
 
