--- a/src/app/components/container/home/categories/categories.component.html
+++ b/src/app/components/container/home/categories/categories.component.html
@@ -2,13 +2,14 @@
         <ul class="categorie container flex jcc aic ">
             <li class="listPuce flex " *ngFor="let cat of categories_data">
                 <div class="categorie-image">
-                    <a [routerLink]="cat?.path">
+                    <a href="#" (click)="filterProducts(cat.name)">
                         <img src="{{ cat?.image }}" >
                     </a>
                     
                 </div>
                 <div class="categorie-info">
-                    <a [routerLink]="cat?.path">{{ cat?.name }}</a>
+                    <a >{{ cat?.name }} </a>
+
                 </div>
             </li>
         </ul>
