--- a/src/app/components/container/home/home.component.scss
+++ b/src/app/components/container/home/home.component.scss
@@ -3,3 +3,135 @@
         display: none;
     }
 }
+
+
+.categories-container {
+    background-color: var(--main-color-green);
+}
+
+.categorie {
+    border-radius: 6px;
+    max-width: 130px;
+    text-align: center;
+    margin-top: 20px;
+    gap: 100px;
+    padding: 20px 0;
+}
+
+.categorie-image {
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 100%;
+    margin-bottom: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+li{
+    flex-direction: column;
+}
+
+.categorie-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+a {
+    text-decoration: none;
+    color: black;
+    font-family: 'odor mean chey', serif;
+    font-weight: 100;
+    font-size: 1.1rem;
+    
+}
+
+
+
+.categorie-info {
+    margin-top: 5%;
+    color: var(--main-color);
+    white-space: nowrap;
+}
+
+/*----Media Query--------*/
+
+@media screen and (max-width: 992px) {
+    .categorie-image {
+        width: 10vw;
+        height: 10vh;
+    }
+
+    .categorie-info a {
+        font-size: 0.9rem;
+    }
+
+    .categorie{
+            gap: 80px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .categorie{
+        gap: 50px;
+        margin-top: 0;
+}
+}
+
+@media screen and (max-width: 768px){
+    .categorie-image {
+        display: none;
+    }
+
+    .categorie-info a{
+        font-size: 0.7rem;
+        gap: 10px;
+    }
+}
+
+//-----------------------------------------------------
+// .categories-container {
+//     background-color: var(--main-color-green);
+// }
+
+// // ul{
+// //     display: flex;
+// // }
+
+// .categorie {
+//     width: 100%;
+//     border-radius: 6px;
+//     max-width: 130px;
+//     text-align: center;
+//     margin-top: 90px;
+//     }
+
+// // li{
+// //     display: flex;
+// //     border-radius: 6px;
+// //     max-width: 130px;
+// //     text-align: center;
+// //     margin-top: 90px;
+// //     justify-content: space-between;
+    
+// // }
+
+// img{
+//         width: 100%;
+//         height: 100%;
+//         overflow: hidden;
+//         border-radius: 100%;
+//         margin: -60px auto ;
+//         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+//         width: 100%;
+//         object-fit: cover;
+//     }
+
+.product-list{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
