--- a/src/app/components/container/home/product/product.component.html
+++ b/src/app/components/container/home/product/product.component.html
@@ -1,22 +1,22 @@
 <!-- Methode handleClickproduct qui vient de "item-ppn.ts" pour écouter evenement -->
-<div class="product-ppn-item" (click)="handleClickProduct(product_ppn)">
+<div class="product-ppn-item" (click)="handleClickProduct(product)">
     <div class="product-ppn-image ">
         <!-- Si product_ppn existe on affiche  "product_ppn.imageUrl[0]" sinon on affiche rien-->
         <img 
-        [src]="product_ppn ? product_ppn.imageUrl[0] : '' " 
-        [alt]="product_ppn?.name">
+        [src]="product ? product.imageUrl[0] : '' " 
+        [alt]="product?.name">
     </div>
 <!------- Information  produit  -->
     <div class="product-ppn-details">
         <div class="product-ppn-name  tc">
 <!------ "?" a été ajouter ( pour l'Affichage de product_ppn s'i existe) -->
-            <h2>{{ product_ppn?.name?.substring(0,50) }}</h2>    
+            <h2>{{ product?.name?.substring(0,50) }}</h2>    
         </div>
         <div class="product-ppn-price flex jcc aic gap-20">
 <!-------"0" a été ajouter : si tu existes = afficher sinon value = 0-->
-            <h3>{{"Tarif : " + (product_ppn?.euro_price || 0)/100 + " €" }}</h3>
+            <h3>{{"Tarif : " + (product?.euro_price || 0)/100 + " €" }}</h3>
             <p>-</p>
-            <h3>{{(product_ppn?.ariary_price || 0) + " Ar" }}</h3>
+            <h3>{{(product?.ariary_price || 0) + " Ar" }}</h3>
         </div>
     </div>
 </div>
