--- a/src/app/components/container/home/home.component.html
+++ b/src/app/components/container/home/home.component.html
@@ -1,16 +1,16 @@
 <app-search-bar></app-search-bar>
 
 <div class="categories-container ">
-    <ul class="categorie container flex jcc aic ">
-        <li class="listPuce flex " *ngFor="let cat of categories_data">
-            <div class="categorie-image">
+    <ul class="categorie container flex jcc aic " >
+        <li class="listPuce flex " *ngFor="let cat of categories_data" >
+            <div class="categorie-image" >
                 <a href="#" (click)="filterProducts(cat.name)">
                     <img src="{{ cat?.image }}" >
                 </a>
                 
             </div>
             <div class="categorie-info">
-                <a >{{ cat?.name }} </a>
+                <a href="#"(click)="filterProducts(cat.name)">{{ cat?.name }} </a>
 
             </div>
         </li>
