--- a/src/app/components/container/home/home.component.scss
+++ b/src/app/components/container/home/home.component.scss
@@ -1,9 +1,3 @@
-@media screen and (max-width:900px){
-    app-search-bar{
-        display: none;
-    }
-}
-
 
 .categories-container {
     background-color: var(--main-color-green);
@@ -14,7 +8,7 @@
     max-width: 130px;
     text-align: center;
     margin-top: 20px;
-    gap: 100px;
+    gap: 50px;
     padding: 20px 0;
 }
 
@@ -40,20 +34,27 @@ li{
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--main-color-black);
     font-family: 'odor mean chey', serif;
     font-weight: 100;
     font-size: 1.1rem;
     
 }
 
-
+h2{
+    margin-right: -10px;
+    border-bottom: 2px solid var(--main-color-black);
+    text-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgba(0, 0, 0, 0.13) 0px 1px 1px;
+}
 
 .categorie-info {
     margin-top: 5%;
     color: var(--main-color);
     white-space: nowrap;
+    text-transform: uppercase;
+    text-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgba(0, 0, 0, 0.13) 0px 1px 1px;
 }
+
 
 /*----Media Query--------*/
 
@@ -68,13 +69,13 @@ a {
     }
 
     .categorie{
-            gap: 80px;
+            gap: 30px;
     }
 }
 
 @media screen and (max-width: 900px) {
     .categorie{
-        gap: 50px;
+        gap: 10px;
         margin-top: 0;
 }
 }
@@ -84,54 +85,20 @@ a {
         display: none;
     }
 
-    .categorie-info a{
+    .categorie-info {
         font-size: 0.7rem;
         gap: 10px;
     }
 }
-
-//-----------------------------------------------------
-// .categories-container {
-//     background-color: var(--main-color-green);
-// }
-
-// // ul{
-// //     display: flex;
-// // }
-
-// .categorie {
-//     width: 100%;
-//     border-radius: 6px;
-//     max-width: 130px;
-//     text-align: center;
-//     margin-top: 90px;
-//     }
-
-// // li{
-// //     display: flex;
-// //     border-radius: 6px;
-// //     max-width: 130px;
-// //     text-align: center;
-// //     margin-top: 90px;
-// //     justify-content: space-between;
-    
-// // }
-
-// img{
-//         width: 100%;
-//         height: 100%;
-//         overflow: hidden;
-//         border-radius: 100%;
-//         margin: -60px auto ;
-//         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-//         width: 100%;
-//         object-fit: cover;
-//     }
-
 .product-list{
     padding: 10px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 50px;
+}
+@media screen and (max-width: 560px){
+    .categorie{
+        display: none;
+    }
 }
