--- a/src/app/components/container/home/home.component.scss
+++ b/src/app/components/container/home/home.component.scss
@@ -55,6 +55,14 @@ h2{
     text-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgba(0, 0, 0, 0.13) 0px 1px 1px;
 }
 
+/* Spinner css */
+mat-progress-spinner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+}
 
 /*----Media Query--------*/
 
